# kursovaya_5

./: README.md  pyproject.toml
kursovaya_5/: DBManager.py  database.ini  main.py  utils.py
